v3.9.3
- Added - SVG Folders icons
- Added - Media extra args to output any custom media by ID
- Fixed - Fixed Category Icon
- Updated - Post Categories will now use Yoast Primary's category and if is used, icon will change to single folder
- Changed - WeCodeArt\Customizer\Config to abastract class and required `register` function.

v3.9.2
- Updated - Maintenance cleanup and NPM Updates (on Github)
- Updated - Removed icons sprite and added PHP generated icons

v3.9.1
- Fixed - Removed comments submit default class key - interfering with filter.
- Updated - Comments allowed tags HTML - Added tooltip functionality.
- Updated - NPM setup - see Github Repo

v3.9.0
- Changed - Default button class changed to btn-dark
- Fixed - Assets enqueue with defined 'WP_DEBUG' (added missing quotes)
- Updated - Improved base design.
- Updated - github version -> npm packages
- Updated - Notification.js enqueue minified/unminified version if WP_DEBUG

v3.8.9
- Fixed - CPT Customizer options and frontend bug with custom slugs for CPT.
- Updated - Passed $comment into comments hooks (top/bottom).
- Updated - ANR reCaptcha support - removed extra wrapper and added .form-group class to parrent wrapper (comments)
- Updated - Archive labels.
- Updated - Scripts loading with WP_DEBUG. If true it will load unminified file, else the minified asset.

v3.8.8
- Added - Customizer Config Class added static method to add customizer configurations. ( Config::add() with an array of controls )
- Fixed - Customizer Divider Control css path.

v3.8.7
- Fixed - Notification.js script path.

v3.8.6
- Updated - Gulp/Webpack assets output to minified/unminified ( setup not in WP Version of the theme )
- Updated - Comments inputs bootstrap form classes
- Updated - Markup::input() - Added Bootstrap custom inputs and support validation/help text ( todo -> add file input )
- Changed - Bumped minimum PHP Version to 5.6.2 and WP Version to 5.0

v3.8.5