@@ -9,12 +9,14 @@
  * @subpackage 	Core\Scripts
  * @copyright   Copyright (c) 2019, WeCodeArt Framework
  * @since 		1.9
- * @version		3.7.5
+ * @version		3.9.3
  */ 
 
 namespace WeCodeArt\Core;
 
-if ( ! defined( 'ABSPATH' ) ) exit();
+defined( 'ABSPATH' ) || exit();
+
+use WeCodeArt\Utilities\Markup;
 
 /**
  * Framework Assets
@@ -29,9 +31,10 @@ class Scripts {
 	 */
 	public function init() {
 		// All starts here
-		add_action( 'wp_enqueue_scripts', 	array( $this, 'front_scripts'  		) );
-		add_action( 'wp_enqueue_scripts', 	array( $this, 'localize_js'			), 90 );
-		add_action( 'wp_default_scripts', 	array( $this, 'jquery_to_footer'	) );
+		add_action( 'wp_enqueue_scripts', 	[ $this, 'front_scripts'		] );
+		add_action( 'wp_enqueue_scripts', 	[ $this, 'localize_js' 			], 90 );
+		add_action( 'wp_default_scripts', 	[ $this, 'jquery_to_footer' 	] );
+		//add_filter( 'script_loader_tag', 	[ $this, 'maybe_enable_attrs' 	], 10, 3 );
 	}
 
 	/**
@@ -90,5 +93,48 @@ class Scripts {
 		if ( ( is_page() || is_single() ) && comments_open() && get_option( 'thread_comments' ) ) {
 			wp_enqueue_script( 'comment-reply' );
 		}
+	}
+
+	/**
+	 * Async / Defer.
+	 *
+	 * @since 3.9.3
+	 *
+	 * @param string $tag    The script tag, generated by WordPress.
+	 * @param string $handle The handle for the registered script.
+	 * @param string $src    The source URL for the script.
+	 * @return string $tag The (maybe) reformatted script tag.
+	 */
+	public function maybe_enable_attrs( $tag, $handle, $src ) {
+
+		$supported_attributes = [
+			'async',
+			'defer',
+		];
+
+		$decoded_src = wp_specialchars_decode( $src );
+
+		$query = wp_parse_url( $decoded_src, PHP_URL_QUERY );
+
+		if ( ! $query ) {
+			return $tag;
+		}
+
+		wp_parse_str( $query, $query_args );
+
+		foreach ( $supported_attributes as $attr ) {
+
+			if ( isset( $query_args[ $attr ] ) && 'true' === $query_args[ $attr ] ) {
+
+				$new_src = esc_url( remove_query_arg( $attr, $decoded_src ) );
+
+				$tag = Markup::strip_attr( $tag, 'script', $attr );
+				$tag = str_replace( ' src=', ' ' . esc_attr( $attr ) . ' src=', $tag );
+				$tag = str_replace( $src, $new_src, $tag );
+			}
+		}
+
+		return $tag;
+
 	}
 }
