@@ -14,7 +14,7 @@
 
 namespace WeCodeArt;
 
-if ( ! defined( 'ABSPATH' ) ) exit();
+defined( 'ABSPATH' ) || exit;
 
 use WeCodeArt\Utilities\Helpers;
 use WeCodeArt\Customizer\Partials;
