@@ -8,17 +8,18 @@
  * @package 	WeCodeArt Framework
  * @subpackage 	Author Box Template
  * @since 		3.0.3
- * @version		3.8.4
+ * @version		3.9.3
  */
 
-if ( ! defined( 'ABSPATH' ) ) exit(); 
+defined( 'ABSPATH' ) || exit();
+
 ?>
 <div id="author-box" class="author-box">
 	<div class="<?php echo esc_attr( $container ); ?>">
 		<div class="row">
 			<div class="author-box__name col-12">
 				<h3 class="author-box__headline">
-					<?php echo $icon; ?>	
+					<?php echo $icon; // phpcs:ignore WordPress.Security.EscapeOutput.OutputNotEscaped ?>	
 					<span><?php echo wp_kses_post( implode( ' ', [ $intro, $name ] ) ); ?></span>
 				</h3>
 			</div>
@@ -33,12 +34,23 @@ if ( ! defined( 'ABSPATH' ) ) exit();
 				] ] );
 			?></div>
 			<div class="author-box__description col">
-				<?php echo wp_kses_post( $description ); ?>
-				<a class="author-box__website btn btn-sm btn-outline-primary float-right"
-					href="<?php echo esc_url( $url ); ?>" target="_blank" rel="nofollow">
-					<?php echo $website['icon']; ?>
-					<span><?php echo esc_html( $website['label'] ); ?></span>
-				</a>
+			<?php echo wp_kses_post( $description ); ?>
+			<?php if( isset( $social ) && is_array( $social ) ) { ?>
+				<div class="author-box__social">
+				<?php foreach( $social as $item ) {
+						$key = strtolower( $item['title'] );
+						$classes = [ 'author-box__social-item', 'author-box__social-item--' . $key, 'mr-2' ];
+						$label	 = $item['icon'];
+					?>
+					<a class="<?php echo esc_attr( implode( ' ', $classes ) ); ?>"
+						href="<?php echo esc_url( $item['url'] ); ?>"
+						target="<?php echo esc_attr( $item['target'] ); ?>"
+						rel="<?php echo ( $item['target'] === '_self' ) ? 'follow' : 'nofollow' ; ?>">
+						<?php echo $label; // phpcs:ignore WordPress.Security.EscapeOutput.OutputNotEscaped ?>
+					</a>
+				<?php } ?>
+				</div>
+			<?php } ?>
 			</div>
 		</div>
 	</div>
